<resources>
    <string name="app_name">CourtCounter</string>
    <string name="team_a">Team A</string>
    <string name="sco_a">0</string>
    <string name="plus3">+3 Points</string>
    <string name="plus2">+2 Points</string>
    <string name="freethrow">Free Throw</string>
    <string name="scob">Team B</string>
    <string name="sco_b">0</string>
    <string name="reset">Reset</string>
</resources>
